style.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans);

body {
	padding:0;
	margin:0;
	background-color:#FFFFFF;
	font-size: 1em;
	font-family: 'Open Sans',sans-serif;
	width: 100%;
	height: 100%;
	position: fixed;
}
#clock svg{
	position: absolute;
	display: block;
	top: 0;
	left: 0;
}

/* events overlay */
.overlay {
	width: 100vw; 
    height: 100vw;
    max-height: 100vh;
    max-width: 100vh;
    margin: auto;
    position: absolute;
    top:0;bottom:0; /* vertical center */
    left:0;right:0; /* horizontal center */
}
/* events */
.eventLine { stroke: black; stroke-width: 2; }
.eventWrapper {
	margin: 0;
	padding: 0;
	display: block;
	position: relative;
	font-family: 'Open Sans',sans-serif;
	font-weight: 400;
}
.eventLabel {
	cursor: pointer;
	white-space: nowrap;
}
.eventLabel:hover {
	text-decoration: underline;
}
.eventPopup {
	position: relative;
	z-index: 1;
	min-width: 100px;
	display: inline-block;
	text-align: left;
	border-radius: 6px;
	/*padding: 2px 4px 2px 4px;*/
	box-shadow: 2px 2px 5px #888888;
	font-size: 0.8em;
	margin-left: auto;
	margin-right: auto;
	border: 1px solid;
}
.eventPopup:before {
	content: "";
	position: absolute;
	top: -4px;
	left: 50%;
	border-bottom: 4px solid black;
	border-top-color: inherit; 
	border-left: 4px solid transparent;
	border-right: 4px solid transparent; 
}
.eventPopup .dateDisplay {
	padding: 5px 10px 5px 10px;
	border-bottom: 1px solid black;
	white-space: nowrap;
}
.eventPopup button {
	display: block;
	padding: 4px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 4%;
	margin-bottom: 4%;
	border-radius: 3px;
	border: none;
	width: 92%;
	box-sizing: border-box;
	background-color: white;
	background-image: linear-gradient(#FFF, #AAA);
	text-align: center;
}
.eventPopup button:active {
	background-color: #EEE;
	background-image: linear-gradient(#AAA, #FFF);
}

/* buttons */
.menuContainer {
	position: relative;
	float: left;
	clear: left;
	margin-top: 1.25em;
	margin-left: 1.25em;
	font-family: 'Open Sans',sans-serif;
	font-size: 1em;
	color: black;
	background-color: #CCC;
	border-radius: 6px;
	font-weight: 400;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	box-shadow: 2px 2px 5px #888888;
}
/* year navigation buttons */
#yearButtons {
	bottom: 0;
	margin-bottom:1.25em;
	position: absolute;
}
.yearButton {
	position: relative;
	float: left;
	font-size: 0.8em;
	padding: 0.3em 0 0.3em 0;
	width: 8em;
	cursor: pointer;
	font-weight: 400;
	text-align: center;
}
.yearButton:active {
	opacity: 0.6;
}
#prevYear {
	border-right: 1px solid black;
}
#nextYear {
	border-left: 1px solid black;
}
/* 'add event' form */
.menuButton:before {
	content: "";
	display: inline-block;
	width: 0;
	height: 0;
	margin-right: 0.3em;
	vertical-align: middle;
	border-top: 0.5em solid black;
	border-left: 0.5em solid transparent;
	border-right: 0.5em solid transparent;
}
.menuButton {
	position: relative;
	padding: 10px;
	cursor: pointer;
	font-weight: 400;
}
/*
.menuButton:before {
	content: "v";
	position: absolute;
	font-weight: 400;
	font-size: 1.5em;
	line-height: 0.7em;
	left: 5px;
	top: 3px;
}
*/

/*	hamburger menu icon
//	.menuButton:before {
//		content: "";
//		position: absolute;
//		left: 8px;
//		top: 8px;
//		width: 17px;
//		height: 2px;
//		background: white;
//		box-shadow:
//			0 5px 0 0 white,
//			0 10px 0 0 white;
//	}
*/

.insertFormHidden {
	display: none;
}
.insertFormShown {
	display: block;
}
#addEventForm {
	padding: 0px 15px 15px 15px;
	width: 200px;
}
#addEventForm input {
	padding: 4px;
	border-radius: 3px;
	border: none;
	margin-top: 10px;
	width: 100%;
	box-sizing: border-box;
}
#addEventSubmit {
	background-color: white;
	background-image: linear-gradient(#FFF, #AAA);
}
#addEventSubmit:active {
	background-image: linear-gradient(#AAA, #FFF);
}
.ui-widget {
	font-size: 0.71em;
}
.submitIdle {
	cursor: pointer;
	display: block;
	background-color: #DDD;
}
.submitIdle:hover {
	background-color: #AAA;
};
.submitIdle:active {
	background-color: #666;
};
.submitWorking {
	cursor: default;
}

